# PercentileCal

./: CMakeLists.txt  LICENSE  README.md
include/: dirhelper.hpp  percentile.hpp  utils.hpp
src/: main.cpp
test/: config_1.txt  config_2.txt  config_3_1.txt  config_3_2.txt  config_3_3.txt
thirds/stmpct/: gk.hpp
